reverse_engineering/parser/Protobuf3Parser.js
// Generated from grammars/Protobuf3.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require("antlr4/index");
var Protobuf3Visitor = require("./Protobuf3Visitor").Protobuf3Visitor;

var grammarFileName = "Protobuf3.g4";


var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map(function (ds, index) {
  return new antlr4.dfa.DFA(ds, index);
});

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [
  null,
  "'syntax'",
  "'import'",
  "'weak'",
  "'public'",
  "'package'",
  "'option'",
  "'optional'",
  "'required'",
  "'repeated'",
  "'extensions'",
  "'oneof'",
  "'map'",
  "'int32'",
  "'int64'",
  "'uint32'",
  "'uint64'",
  "'sint32'",
  "'sint64'",
  "'fixed32'",
  "'fixed64'",
  "'sfixed32'",
  "'sfixed64'",
  "'bool'",
  "'string'",
  "'double'",
  "'float'",
  "'bytes'",
  "'reserved'",
  "'to'",
  "'max'",
  "'enum'",
  "'message'",
  "'service'",
  "'rpc'",
  "'stream'",
  "'returns'",
  "'\"proto3\"'",
  "''proto3''",
  "'\"proto2\"'",
  "''proto2''",
  "';'",
  "'='",
  "'('",
  "')'",
  "'['",
  "']'",
  "'{'",
  "'}'",
  "'<'",
  "'>'",
  "'.'",
  "','",
  "':'",
  "'+'",
  "'-'",
];

var symbolicNames = [
  null,
  "SYNTAX",
  "IMPORT",
  "WEAK",
  "PUBLIC",
  "PACKAGE",
  "OPTION",
  "OPTIONAL",
  "REQUIRED",
  "REPEATED",
  "EXTENSIONS",
  "ONEOF",
  "MAP",
  "INT32",
  "INT64",
  "UINT32",
  "UINT64",
  "SINT32",
  "SINT64",
  "FIXED32",
  "FIXED64",
  "SFIXED32",
  "SFIXED64",
  "BOOL",
  "STRING",
  "DOUBLE",
  "FLOAT",
  "BYTES",
  "RESERVED",
  "TO",
  "MAX",
  "ENUM",
  "MESSAGE",
  "SERVICE",
  "RPC",
  "STREAM",
  "RETURNS",
  "PROTO3_LIT_SINGLE",
  "PROTO3_LIT_DOBULE",
  "PROTO2_LIT_SINGLE",
  "PROTO2_LIT_DOBULE",
  "SEMI",
  "EQ",
  "LP",
  "RP",
  "LB",
  "RB",
  "LC",
  "RC",
  "LT",
  "GT",
  "DOT",
  "COMMA",
  "COLON",
  "PLUS",
  "MINUS",
  "STR_LIT",
  "BOOL_LIT",
  "FLOAT_LIT",
  "INT_LIT",
  "IDENTIFIER",
  "WS",
  "COMMENT",
  "LINE_COMMENT",
  "EOL",
];

var ruleNames = [
  "proto",
  "syntax",
  "importStatement",
  "packageStatement",
  "optionStatement",
  "optionName",
  "field",
  "fieldOptions",
  "fieldOption",
  "fieldNumber",
  "extensions",
  "oneof",
  "oneofField",
  "mapField",
  "keyType",
  "type_",
  "reserved",
  "ranges",
  "range_",
  "reservedFieldNames",
  "topLevelDef",
  "enumDef",
  "enumBody",
  "enumElement",
  "enumField",
  "enumValueOptions",
  "enumValueOption",
  "messageDef",
  "messageBody",
  "messageElement",
  "serviceDef",
  "serviceElement",
  "rpc",
  "constant",
  "blockLit",
  "emptyStatement",
  "ident",
  "fullIdent",
  "messageName",
  "enumName",
  "fieldName",
  "oneofName",
  "mapName",
  "serviceName",
  "rpcName",
  "messageType",
  "enumType",
  "intLit",
  "strLit",
  "boolLit",
  "floatLit",
  "comment",
  "lineComment",
  "fieldLineComment",
  "keywords",
];

function Protobuf3Parser(input) {
  antlr4.Parser.call(this, input);
  this._interp = new antlr4.atn.ParserATNSimulator(
    this,
    atn,
    decisionsToDFA,
    sharedContextCache
  );
  this.ruleNames = ruleNames;
  this.literalNames = literalNames;
  this.symbolicNames = symbolicNames;

  this.isPreviousTokenOnHiddenChannel = function () {
    const previousToken = input.tokens[input.index - 1];
    return previousToken?.channel == antlr4.Lexer.HIDDEN;
  };

  return this;
}

Protobuf3Parser.prototype = Object.create(antlr4.Parser.prototype);
Protobuf3Parser.prototype.constructor = Protobuf3Parser;

Object.defineProperty(Protobuf3Parser.prototype, "atn", {
  get: function () {
    return atn;
  },
});

Protobuf3Parser.EOF = antlr4.Token.EOF;
Protobuf3Parser.SYNTAX = 1;
Protobuf3Parser.IMPORT = 2;
Protobuf3Parser.WEAK = 3;
Protobuf3Parser.PUBLIC = 4;
Protobuf3Parser.PACKAGE = 5;
Protobuf3Parser.OPTION = 6;
Protobuf3Parser.OPTIONAL = 7;
Protobuf3Parser.REQUIRED = 8;
Protobuf3Parser.REPEATED = 9;
Protobuf3Parser.EXTENSIONS = 10;
Protobuf3Parser.ONEOF = 11;
Protobuf3Parser.MAP = 12;
Protobuf3Parser.INT32 = 13;
Protobuf3Parser.INT64 = 14;
Protobuf3Parser.UINT32 = 15;
Protobuf3Parser.UINT64 = 16;
Protobuf3Parser.SINT32 = 17;
Protobuf3Parser.SINT64 = 18;
Protobuf3Parser.FIXED32 = 19;
Protobuf3Parser.FIXED64 = 20;
Protobuf3Parser.SFIXED32 = 21;
Protobuf3Parser.SFIXED64 = 22;
Protobuf3Parser.BOOL = 23;
Protobuf3Parser.STRING = 24;
Protobuf3Parser.DOUBLE = 25;
Protobuf3Parser.FLOAT = 26;
Protobuf3Parser.BYTES = 27;
Protobuf3Parser.RESERVED = 28;
Protobuf3Parser.TO = 29;
Protobuf3Parser.MAX = 30;
Protobuf3Parser.ENUM = 31;
Protobuf3Parser.MESSAGE = 32;
Protobuf3Parser.SERVICE = 33;
Protobuf3Parser.RPC = 34;
Protobuf3Parser.STREAM = 35;
Protobuf3Parser.RETURNS = 36;
Protobuf3Parser.PROTO3_LIT_SINGLE = 37;
Protobuf3Parser.PROTO3_LIT_DOBULE = 38;
Protobuf3Parser.PROTO2_LIT_SINGLE = 39;
Protobuf3Parser.PROTO2_LIT_DOBULE = 40;
Protobuf3Parser.SEMI = 41;
Protobuf3Parser.EQ = 42;
Protobuf3Parser.LP = 43;
Protobuf3Parser.RP = 44;
Protobuf3Parser.LB = 45;
Protobuf3Parser.RB = 46;
Protobuf3Parser.LC = 47;
Protobuf3Parser.RC = 48;
Protobuf3Parser.LT = 49;
Protobuf3Parser.GT = 50;
Protobuf3Parser.DOT = 51;
Protobuf3Parser.COMMA = 52;
Protobuf3Parser.COLON = 53;
Protobuf3Parser.PLUS = 54;
Protobuf3Parser.MINUS = 55;
Protobuf3Parser.STR_LIT = 56;
Protobuf3Parser.BOOL_LIT = 57;
Protobuf3Parser.FLOAT_LIT = 58;
Protobuf3Parser.INT_LIT = 59;
Protobuf3Parser.IDENTIFIER = 60;
Protobuf3Parser.WS = 61;
Protobuf3Parser.COMMENT = 62;
Protobuf3Parser.LINE_COMMENT = 63;
Protobuf3Parser.EOL = 64;

Protobuf3Parser.RULE_proto = 0;
Protobuf3Parser.RULE_syntax = 1;
Protobuf3Parser.RULE_importStatement = 2;
Protobuf3Parser.RULE_packageStatement = 3;
Protobuf3Parser.RULE_optionStatement = 4;
Protobuf3Parser.RULE_optionName = 5;
Protobuf3Parser.RULE_field = 6;
Protobuf3Parser.RULE_fieldOptions = 7;
Protobuf3Parser.RULE_fieldOption = 8;
Protobuf3Parser.RULE_fieldNumber = 9;
Protobuf3Parser.RULE_extensions = 10;
Protobuf3Parser.RULE_oneof = 11;
Protobuf3Parser.RULE_oneofField = 12;
Protobuf3Parser.RULE_mapField = 13;
Protobuf3Parser.RULE_keyType = 14;
Protobuf3Parser.RULE_type_ = 15;
Protobuf3Parser.RULE_reserved = 16;
Protobuf3Parser.RULE_ranges = 17;
Protobuf3Parser.RULE_range_ = 18;
Protobuf3Parser.RULE_reservedFieldNames = 19;
Protobuf3Parser.RULE_topLevelDef = 20;
Protobuf3Parser.RULE_enumDef = 21;
Protobuf3Parser.RULE_enumBody = 22;
Protobuf3Parser.RULE_enumElement = 23;
Protobuf3Parser.RULE_enumField = 24;
Protobuf3Parser.RULE_enumValueOptions = 25;
Protobuf3Parser.RULE_enumValueOption = 26;
Protobuf3Parser.RULE_messageDef = 27;
Protobuf3Parser.RULE_messageBody = 28;
Protobuf3Parser.RULE_messageElement = 29;
Protobuf3Parser.RULE_serviceDef = 30;
Protobuf3Parser.RULE_serviceElement = 31;
Protobuf3Parser.RULE_rpc = 32;
Protobuf3Parser.RULE_constant = 33;
Protobuf3Parser.RULE_blockLit = 34;
Protobuf3Parser.RULE_emptyStatement = 35;
Protobuf3Parser.RULE_ident = 36;
Protobuf3Parser.RULE_fullIdent = 37;
Protobuf3Parser.RULE_messageName = 38;
Protobuf3Parser.RULE_enumName = 39;
Protobuf3Parser.RULE_fieldName = 40;
Protobuf3Parser.RULE_oneofName = 41;
Protobuf3Parser.RULE_mapName = 42;
Protobuf3Parser.RULE_serviceName = 43;
Protobuf3Parser.RULE_rpcName = 44;
Protobuf3Parser.RULE_messageType = 45;
Protobuf3Parser.RULE_enumType = 46;
Protobuf3Parser.RULE_intLit = 47;
Protobuf3Parser.RULE_strLit = 48;
Protobuf3Parser.RULE_boolLit = 49;
Protobuf3Parser.RULE_floatLit = 50;
Protobuf3Parser.RULE_comment = 51;
Protobuf3Parser.RULE_lineComment = 52;
Protobuf3Parser.RULE_fieldLineComment = 53;
Protobuf3Parser.RULE_keywords = 54;

function ProtoContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = Protobuf3Parser.RULE_proto;
  return this;
}

ProtoContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProtoContext.prototype.constructor = ProtoContext;

ProtoContext.prototype.syntax = function () {
  return this.getTypedRuleContext(SyntaxContext, 0);
};

ProtoContext.prototype.importStatement = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ImportStatementContext);
  } else {
    return this.getTypedRuleContext(ImportStatementContext, i);
  }
};

ProtoContext.prototype.packageStatement = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(PackageStatementContext);
  } else {
    return this.getTypedRuleContext(PackageStatementContext, i);
  }
};

ProtoContext.prototype.optionStatement = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(OptionStatementContext);
  } else {
    return this.getTypedRuleContext(OptionStatementContext, i);
  }
};

ProtoContext.prototype.topLevelDef = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(TopLevelDefContext);
  } else {
    return this.getTypedRuleContext(TopLevelDefContext, i);
  }
};

ProtoContext.prototype.emptyStatement = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(EmptyStatementContext);
  } else {
    return this.getTypedRuleContext(EmptyStatementContext, i);
  }
};

ProtoContext.prototype.COMMENT = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTokens(Protobuf3Parser.COMMENT);
  } else {
    return this.getToken(Protobuf3Parser.COMMENT, i);
  }
};

ProtoContext.prototype.LINE_COMMENT = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTokens(Protobuf3Parser.LINE_COMMENT);
  } else {
    return this.getToken(Protobuf3Parser.LINE_COMMENT, i);
  }
};

ProtoContext.prototype.accept = function (visitor) {
  if (visitor instanceof Protobuf3Visitor) {
    return visitor.visitProto(this);
  } else {
    return visitor.visitChildren(this);
  }
};

Protobuf3Parser.ProtoContext = ProtoContext;

Protobuf3Parser.prototype.proto = function () {
  var localctx = new ProtoContext(this, this._ctx, this.state);
  this.enterRule(localctx, 0, Protobuf3Parser.RULE_proto);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 113;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    while (
      _la === Protobuf3Parser.COMMENT ||
      _la === Protobuf3Parser.LINE_COMMENT
    ) {
      this.state = 110;
      _la = this._input.LA(1);
      if (
        !(
          _la === Protobuf3Parser.COMMENT ||
          _la === Protobuf3Parser.LINE_COMMENT
        )
      ) {
        this._errHandler.recoverInline(this);
      } else {
        this._errHandler.reportMatch(this);
        this.consume();
      }
      this.state = 115;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    }
    this.state = 116;
    this.syntax();
    this.state = 126;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    while (
      ((_la & ~0x1f) == 0 &&
        ((1 << _la) &
          ((1 << Protobuf3Parser.IMPORT) |
            (1 << Protobuf3Parser.PACKAGE) |
            (1 << Protobuf3Parser.OPTION) |
            (1 << Protobuf3Parser.ENUM))) !==
          0) ||
      (((_la - 32) & ~0x1f) == 0 &&
        ((1 << (_la - 32)) &
          ((1 << (Protobuf3Parser.MESSAGE - 32)) |
            (1 << (Protobuf3Parser.SERVICE - 32)) |
            (1 << (Protobuf3Parser.SEMI - 32)) |
            (1 << (Protobuf3Parser.COMMENT - 32)) |
            (1 << (Protobuf3Parser.LINE_COMMENT - 32)))) !==
          0)
    ) {
      this.state = 124;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 1, this._ctx);
      switch (la_) {
        case 1:
          this.state = 117;
          this.importStatement();
          break;

        case 2:
          this.state = 118;
          this.packageStatement();
          break;

        case 3:
          this.state = 119;
          this.optionStatement();
          break;

        case 4:
          this.state = 120;
          this.topLevelDef();
          break;

        case 5:
          this.state = 121;
          this.emptyStatement();
          break;

        case 6:
          this.state = 122;
          this.match(Protobuf3Parser.COMMENT);
          break;

        case 7:
          this.state = 123;
          this.match(Protobuf3Parser.LINE_COMMENT);
          break;
      }
      this.state = 128;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function SyntaxContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = Protobuf3Parser.RULE_syntax;
  this.version = null; // Token
  return this;
}

SyntaxContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SyntaxContext.prototype.constructor = SyntaxContext;

SyntaxContext.prototype.SYNTAX = function () {
  return this.getToken(Protobuf3Parser.SYNTAX, 0);
};

SyntaxContext.prototype.EQ = function () {
  return this.getToken(Protobuf3Parser.EQ, 0);
};

SyntaxContext.prototype.SEMI = function () {
  return this.getToken(Protobuf3Parser.SEMI, 0);
};

SyntaxContext.prototype.PROTO3_LIT_SINGLE = function () {
  return this.getToken(Protobuf3Parser.PROTO3_LIT_SINGLE, 0);
};

SyntaxContext.prototype.PROTO3_LIT_DOBULE = function () {
  return this.getToken(Protobuf3Parser.PROTO3_LIT_DOBULE, 0);
};

SyntaxContext.prototype.PROTO2_LIT_SINGLE = function () {
  return this.getToken(Protobuf3Parser.PROTO2_LIT_SINGLE, 0);
};

SyntaxContext.prototype.PROTO2_LIT_DOBULE = function () {
  return this.getToken(Protobuf3Parser.PROTO2_LIT_DOBULE, 0);
};

SyntaxContext.prototype.accept = function (visitor) {
  if (visitor instanceof Protobuf3Visitor) {
    return visitor.visitSyntax(this);
  } else {
    return visitor.visitChildren(this);
  }
};

Protobuf3Parser.SyntaxContext = SyntaxContext;

Protobuf3Parser.prototype.syntax = function () {
  var localctx = new SyntaxContext(this, this._ctx, this.state);
  this.enterRule(localctx, 2, Protobuf3Parser.RULE_syntax);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 129;
    this.match(Protobuf3Parser.SYNTAX);
    this.state = 130;
    this.match(Protobuf3Parser.EQ);
    this.state = 131;
    localctx.version = this._input.LT(1);
    _la = this._input.LA(1);
    if (
      !(
        ((_la - 37) & ~0x1f) == 0 &&
        ((1 << (_la - 37)) &
          ((1 << (Protobuf3Parser.PROTO3_LIT_SINGLE - 37)) |
            (1 << (Protobuf3Parser.PROTO3_LIT_DOBULE - 37)) |
            (1 << (Protobuf3Parser.PROTO2_LIT_SINGLE - 37)) |
            (1 << (Protobuf3Parser.PROTO2_LIT_DOBULE - 37)))) !==
          0
      )
    ) {
      localctx.version = this._errHandler.recoverInline(this);
    } else {
      this._errHandler.reportMatch(this);
      this.consume();
    }
    this.state = 132;
    this.match(Protobuf3Parser.SEMI);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function ImportStatementContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = Protobuf3Parser.RULE_importStatement;
  this.accessModifier = null; // Token
  return this;
}

ImportStatementContext.prototype = Object.create(
  antlr4.ParserRuleContext.prototype
);
ImportStatementContext.prototype.constructor = ImportStatementContext;

ImportStatementContext.prototype.IMPORT = function () {
  return this.getToken(Protobuf3Parser.IMPORT, 0);
};

ImportStatementContext.prototype.strLit = function () {
  return this.getTypedRuleContext(StrLitContext, 0);
};

ImportStatementContext.prototype.SEMI = function () {
  return this.getToken(Protobuf3Parser.SEMI, 0);
};

ImportStatementContext.prototype.WEAK = function () {
  return this.getToken(Protobuf3Parser.WEAK, 0);
};

ImportStatementContext.prototype.PUBLIC = function () {
  return this.getToken(Protobuf3Parser.PUBLIC, 0);
};

ImportStatementContext.prototype.accept = function (visitor) {
  if (visitor instanceof Protobuf3Visitor) {
    return visitor.visitImportStatement(this);
  } else {
    return visitor.visitChildren(this);
  }
};

Protobuf3Parser.ImportStatementContext = ImportStatementContext;

Protobuf3Parser.prototype.importStatement = function () {
  var localctx = new ImportStatementContext(this, this._ctx, this.state);
  this.enterRule(localctx, 4, Protobuf3Parser.RULE_importStatement);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 134;
    this.match(Protobuf3Parser.IMPORT);
    this.state = 136;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if (_la === Protobuf3Parser.WEAK || _la === Protobuf3Parser.PUBLIC) {
      this.state = 135;
      localctx.accessModifier = this._input.LT(1);
      _la = this._input.LA(1);
      if (!(_la === Protobuf3Parser.WEAK || _la === Protobuf3Parser.PUBLIC)) {
        localctx.accessModifier = this._errHandler.recoverInline(this);
      } else {
        this._errHandler.reportMatch(this);
        this.consume();
      }
    }

    this.state = 138;
    this.strLit();
    this.state = 139;
    this.match(Protobuf3Parser.SEMI);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function PackageStatementContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = Protobuf3Parser.RULE_packageStatement;
  return this;
}

PackageStatementContext.prototype = Object.create(
  antlr4.ParserRuleContext.prototype
);
PackageStatementContext.prototype.constructor = PackageStatementContext;

PackageStatementContext.prototype.PACKAGE = function () {
  return this.getToken(Protobuf3Parser.PACKAGE, 0);
};

PackageStatementContext.prototype.fullIdent = function () {
  return this.getTypedRuleContext(FullIdentContext, 0);
};

PackageStatementContext.prototype.SEMI = function () {
  return this.getToken(Protobuf3Parser.SEMI, 0);
};

PackageStatementContext.prototype.accept = function (visitor) {
  if (visitor instanceof Protobuf3Visitor) {
    return visitor.visitPackageStatement(this);
  } else {
    return visitor.visitChildren(this);
  }
};

Protobuf3Parser.PackageStatementContext = PackageStatementContext;

Protobuf3Parser.prototype.packageStatement = function () {
  var localctx = new PackageStatementContext(this, this._ctx, this.state);
  this.enterRule(localctx, 6, Protobuf3Parser.RULE_packageStatement);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 141;
    this.match(Protobuf3Parser.PACKAGE);
    this.state = 142;
    this.fullIdent();
    this.state = 143;
    this.match(Protobuf3Parser.SEMI);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function OptionStatementContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = Protobuf3Parser.RULE_optionStatement;
  return this;
}

OptionStatementContext.prototype = Object.create(
  antlr4.ParserRuleContext.prototype
);
OptionStatementContext.prototype.constructor = OptionStatementContext;
